--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 /* @tailwind base;	disabled to avoid conflicts with mantine */
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Electrolize&display=swap');
 
 :root {
 	--primary: #0072f5;
@@ -22,7 +23,7 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+	font-family: 'Electrolize', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
