--- a/styles/Shell.module.scss
+++ b/styles/Shell.module.scss
@@ -11,19 +11,25 @@
     color: var(--gradient);
 
     h1 {
-        font-size: 2rem;
         font-family: 'Electrolize', sans-serif;
         padding-top: 0.5rem;
     }
-
-    h2 {
-        font-size: 1.5rem;
-    }
 }
 
-.shell main {
+.content {
     padding: 0.5rem;
     height: calc(100vh - 2 * var(--nav-height));
     max-height: calc(100vh - 1 * var(--nav-height));
     overflow-y: auto;
+}
+
+.footer {
+    height: var(--nav-height);
+    padding: 1rem;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+
+    border-top: 1px solid var(--secondary)
 }
